<resources>
    <string name="app_name">English Learn</string>
    <string name="activity_main_play_button_text">Play</string>
    <string name="splash_screen_text_part_1">English</string>
    <string name="splash_screen_text_part_2">Learn</string>
    <string name="vocabulary_fragment_title">Vocabulary</string>
    <string name="search_field_placeholder">Search</string>
    <string name="vocabulary_list_header_text">My words</string>
    <string name="vocabulary_fab_text">Add</string>
    <string name="mini_game_task_text">Choose word matches translation</string>
    <string name="statistics_fragment_title">Statistics</string>
    <string name="word_add_fragment_title">New words</string>
    <string name="game_activity_title">Game</string>
    <string name="question_fragment_title_text">Question: %d/%d</string>
    <string name="game_result_fragment_title">Result</string>
    <string name="game_result_title_text">Your result is</string>
    <string name="game_result_mistakes_title_text">Mistakes</string>
    <string name="game_result_menu_button_text">Finish</string>
    <string name="game_result_points_text">%d/%d</string>
    <string name="game_result_mistake_header">Question %d</string>
    <string name="statistics_list_item_date_text">%s, %d</string>
    <string name="statistics_list_item_games_number_text">Games: %d</string>
    <string name="statistics_list_item_correct_answers_text">Correct: %d%%</string>
</resources>